--- a/Calendar/Calendar.Android/Calendar.Android.csproj
+++ b/Calendar/Calendar.Android/Calendar.Android.csproj
@@ -100,10 +100,22 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawble\lotos.png" />
+    <AndroidResource Include="Resources\drawable\time.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawble\flower.png" />
+    <AndroidResource Include="Resources\drawable\sleep.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\history.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\acc.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\calend.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\account.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
